重构为纯 Java 模拟 + 免装 Java 发布包
- 剥离 Fabric mod，改为纯 Java 模拟官方 26.2 生成（sim 层：随机源/NBT/JSON/模板池/Jigsaw）
- 零第三方依赖：自研 JSON 解析器，去除 gson/shadow
- 独立启动器 trial.bat：自动找捆绑 runtime/JDK25、自动构建、原生 \r 进度条
- make-dist.bat：jlink 精简 JRE（~30MB）+ dist.zip 免装 Java 发布包
- 定点查询：移植旧项目输出格式（种类统计/明细表/宝库），支持 --help
- 命令行 --key value 覆盖 finder.properties

Co-Authored-By: Claude <noreply@anthropic.com>